--- a/style.css
+++ b/style.css
@@ -3,13 +3,8 @@
   bottom: 0;
 }
 div#dots {
-  position: relative;
-  margin-top: 50vh;
-  text-align: center;
-  width: 100px;
+  margin-top: 20px;
   height: 100px;
-  margin-left: auto;
-  margin-right: auto;
 }
 div#dots .dot {
   display: inline-block;
