--- a/style.css
+++ b/style.css
@@ -1,10 +1,97 @@
 .small-bucket {
   position: absolute;
   bottom: 0;
+  max-width: 450px;
+  margin: 0 auto;
 }
+
+li {
+  max-width: 255px;
+  word-wrap: break-word;
+  margin-bottom: 12px;
+  line-height: 24px;
+  list-style-type: none;
+}
+li:after {
+ content: "";
+ display: table;
+ clear: both;
+}
+
+.clear {
+  clear: both;
+}
+
+.chat-question {
+ position: relative;
+ padding: 10px 20px;
+ color: white;
+ background: #0B93F6;
+ border-radius: 25px;
+ float: right;
+}
+.chat-question:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: -2px;
+  right: -7px;
+  height: 20px;
+  border-right: 20px solid #0B93F6;
+  border-bottom-left-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px);
+}
+
+.chat-question:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -2px;
+  right: -56px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+  -webkit-transform: translate(-30px, -2px);
+}
+
+.chat-btn {
+ position: relative;
+ padding: 10px 20px;
+ background: #E5E5EA;
+ border-radius: 25px;
+ color: black;
+ float: left;
+}
+
+.chat-btn:before {
+ content: "";
+ position: absolute;
+ z-index: 2;
+ bottom: -2px;
+ left: -7px;
+ height: 20px;
+ border-left: 20px solid #E5E5EA;
+ border-bottom-right-radius: 16px 14px;
+ -webkit-transform: translate(0, -2px);
+}
+
+.chat-btn:after {
+  content: "";
+  position: absolute;
+  z-index: 3;
+  bottom: -2px;
+  left: 4px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+  -webkit-transform: translate(-30px, -2px);
+}
+/*-----DOTS---------------*/
 div#dots {
   margin-top: 20px;
-  height: 100px;
+  height: 20px;
 }
 div#dots .dot {
   display: inline-block;
