--- a/style.css
+++ b/style.css
@@ -1,36 +1,47 @@
 .small-bucket {
   position: absolute;
   bottom: 0;
-  max-width: 450px;
-  margin: 0 auto;
+  max-width: 600px;
+  left: 0;
+  right: 0;
+  margin: auto
+}
+
+button {
+  margin-left: 25px;
+   border-style: none;
 }
 
 li {
-  max-width: 255px;
+  max-width: 700px;
   word-wrap: break-word;
-  margin-bottom: 12px;
+  margin-bottom: 15px;
   line-height: 24px;
   list-style-type: none;
 }
+
 li:after {
- content: "";
- display: table;
- clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .clear {
   clear: both;
 }
 
-.chat-question {
- position: relative;
- padding: 10px 20px;
- color: white;
- background: #0B93F6;
- border-radius: 25px;
- float: right;
+.chat-question,
+#dots {
+  position: relative;
+  padding: 10px 20px;
+  color: white;
+  background: #0B93F6;
+  border-radius: 25px;
+  float: right;
 }
-.chat-question:before {
+
+.chat-question:before,
+#dots:before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -42,7 +53,8 @@ li:after {
   -webkit-transform: translate(0, -2px);
 }
 
-.chat-question:after {
+.chat-question:after,
+#dots:after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -55,28 +67,31 @@ li:after {
   -webkit-transform: translate(-30px, -2px);
 }
 
-.chat-btn {
- position: relative;
- padding: 10px 20px;
- background: #E5E5EA;
- border-radius: 25px;
- color: black;
- float: left;
+.chat-btn button.left,
+.chat-btn button.right {
+  position: relative;
+  padding: 10px 20px;
+  background: #E5E5EA;
+  border-radius: 25px;
+  color: black;
+  float: left;
 }
 
-.chat-btn:before {
- content: "";
- position: absolute;
- z-index: 2;
- bottom: -2px;
- left: -7px;
- height: 20px;
- border-left: 20px solid #E5E5EA;
- border-bottom-right-radius: 16px 14px;
- -webkit-transform: translate(0, -2px);
+.chat-btn button.left:before,
+.chat-btn button.right:before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  bottom: -2px;
+  left: -7px;
+  height: 20px;
+  border-left: 20px solid #E5E5EA;
+  border-bottom-right-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px);
 }
 
-.chat-btn:after {
+.chat-btn button.left:after,
+.chat-btn button.right:after {
   content: "";
   position: absolute;
   z-index: 3;
@@ -88,11 +103,13 @@ li:after {
   border-bottom-right-radius: 10px;
   -webkit-transform: translate(-30px, -2px);
 }
+
 /*-----DOTS---------------*/
 div#dots {
   margin-top: 20px;
   height: 20px;
 }
+
 div#dots .dot {
   display: inline-block;
   width: 12px;
@@ -102,9 +119,11 @@ div#dots .dot {
   background: #303131;
   animation: dots 1.3s linear infinite;
 }
+
 div#dots .dot:nth-child(2) {
   animation-delay: -1.1s;
 }
+
 div#dots .dot:nth-child(3) {
   animation-delay: -0.9s;
 }
@@ -113,6 +132,7 @@ div#dots .dot:nth-child(3) {
   0%, 60%, 100% {
     transform: initial;
   }
+
   30% {
     transform: translateY(-15px);
   }
