--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.1em;
+}
 .small-bucket {
   position: absolute;
   bottom: 0;
   max-width: 600px;
   left: 0;
   right: 0;
-  margin: auto
+  margin: auto;
 }
 
 button {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.1em;
   margin-left: 25px;
-   border-style: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-style: none;
 }
 
 li {
@@ -112,8 +120,8 @@ div#dots {
 
 div#dots .dot {
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   margin-right: 3px;
   background: #303131;
