--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ li:after {
   position: relative;
   padding: 10px 20px;
   color: white;
-  background: #0B93F6;
+  background: #63B8FF;
   border-radius: 25px;
   float: right;
 }
@@ -120,11 +120,11 @@ div#dots {
 
 div#dots .dot {
   display: inline-block;
-  width: 8px;
-  height: 8px;
+  width: 5px;
+  height: 5px;
   border-radius: 50%;
   margin-right: 3px;
-  background: #303131;
+  background: #4F4F4F;
   animation: dots 1.3s linear infinite;
 }
 
